<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout_spiega2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text_view_titolo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#811c1c"
        android:paddingBottom="2px"
        android:paddingTop="2px"
        android:text="@string/spiegazione"
        android:textColor="#fff"
        android:textSize="24sp" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#fff" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="291dp"
        android:layout_weight="1.20" >

        <!--
             <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            </LinearLayout>
        -->

        <TextView
            android:id="@+id/text_view_spiega2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spiegazione2"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>
    </ScrollView>

    <!--
     <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
     </LinearLayout>
    -->



    <Button
        android:id="@+id/button_continue"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_gravity="right"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"       
        android:text="@string/my_continue"
        android:textColor="#f00"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>